src/test/ui/existential_types/unused_generic_param.stderr
error: at least one trait must be specified
  --> $DIR/unused_generic_param.rs:6:1
   |
LL | existential type PartiallyDefined<T>: 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: at least one trait must be specified
  --> $DIR/unused_generic_param.rs:13:1
   |
LL | existential type PartiallyDefined2<T>: 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

